Changed java version to 11.