@@ -33,6 +33,23 @@
 
     <dependencies>
 
+<dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+    <version>1.3.2</version>
+</dependency>
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.4.0-b180725.0427</version>
+</dependency>
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+    <version>2.4.0-b180725.0644</version>
+</dependency>
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -186,13 +203,11 @@
                     <inherited>true</inherited>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
+                    <version>3.8.0</version>
                     <configuration>
-                        <compilerArgs>
-                            <arg>--add-modules=java.xml.bind,java.xml,java.xml.ws.annotation</arg>
-                        </compilerArgs>
-                        <source>1.10</source>
-                        <target>1.10</target>
+                        
+                        <source>11</source>
+                        <target>11</target>
                         <fork>true</fork>
                         <encoding>UTF-8</encoding>
                         <showWarnings>true</showWarnings>
@@ -214,8 +229,7 @@
                     <version>2.19</version>
                     <configuration>
                         <argLine>
-                            --add-modules=java.xml.bind
-                            --illegal-access=deny
+                            --illegal-access=permit
                         </argLine>
                         <includes>
                             <include>**/Test*.java</include>
